[fix] 修复 db 初始化脚本中的错误。 调整产品名称
